fix(styles): meal-swap-dialog padding on mobile

--- a/src/app/planning/meal/meal-swap-dialog/meal-swap-dialog.component.scss
+++ b/src/app/planning/meal/meal-swap-dialog/meal-swap-dialog.component.scss
@@ -1,6 +1,8 @@
 @import '../../../../styles/colors';
 
 ::ng-deep .meal-swap-dialog .mat-dialog-container {
+	padding: 20px;
+	overflow: inherit;
 	@media (min-width: 600px) {
 		padding: 20px 40px;
 	}
